cloud/cloudformation/cf.yaml
AWSTemplateFormatVersion: 2010-09-09

Conditions:
  CreateResources: !Or [ !Equals [!Ref EnvType, "prod"], !Equals [!Ref EnvType, "dev"] ]
  ProdEnv: !Equals [!Ref EnvType, "prod"]

Parameters:
  EnvType:
    Description: Environment type.
    Default: test
    Type: String
    AllowedValues: [prod, dev, test]
    ConstraintDescription: must specify prod, dev, or test.

  AccountId:
    Type: String
    Description: Team Account Id
  VpcId:
    Type: 'AWS::EC2::VPC::Id'
    Description: Select a VPC that allows instances to access the Internet.
  PublicSubnet1:
    Type: String
    Description: Public subnets for the load balancer
  PublicSubnet2:
    Type: String
  PrivateSubnet1:
    Type: String
    Description: Private subnets for the services
  PrivateSubnet2:
    Type: String
  ContainerPort:
    Type: Number
    Default: 5000
    Description: port to use for task def/target group/service
  ClusterName:
    Type: String
    Description: ECS cluster name

  #Task definition parameters
  UsersRepo:
    Type: String
    Description: ECR image for users
  FlightsRepo:
    Type: String
    Description: ECR image for flights
  BookingsRepo:
    Type: String
    Description: ECR image for bookings
  FrontendRepo:
    Type: String
    Description: ECR image for frontend
  IamRole:
    Type: String
    Description: Task Defintion taskExecutionRoleArn
  UsersFamily:
    Type: String
    Description: Users task definition family
  FlightsFamily:
    Type: String
    Description: Flights task definition family
  BookingsFamily:
    Type: String
    Description: Bookings task definition family
  FrontendFamily:
    Type: String
    Description: Frontend task definition family
  UsersContainer:
    Type: String
    Description: Users container name
  FlightsContainer:
    Type: String
    Description: Flights container name
  BookingsContainer:
    Type: String
    Description: Bookings container name
  FrontendContainer:
    Type: String
    Description: Frontend container name

  #https://stackoverflow.com/questions/57213974/aws-cloudformation-containerdefinitions-secrets-assigning-full-secretstring-for
  SSMSecretString:
    Type: String
    Description: the secret string path to access SSM 
  DbHost:
    Type: String
    Description: SSM db host path
  DbUser:
    Type: String
    Description: SSM db username path
  DbPassword:
    Type: String
    Description: SSM db password path
  SecretKey:
    Type: String
    Description: SSM secret key path

  #Target Group Parameters
  UsersHealthCheck:
    Type: String
    Description: health check path
  FlightsHealthCheck:
    Type: String
  BookingsHealthCheck:
    Type: String
  FrontendHealthCheck:
    Type: String

  #ALB Listener Parameters
  UsersPath:
    Type: String
    Description: Ingress path prefix rules
  FlightsPath:
    Type: String
  BookingsPath:
    Type: String
  FrontendPath:
    Type: String

  #Route53 Parameters
  HostedZoneId:
    Type: String
    Description: Hosted Zone ID for HITWC
  RecordName:
    Type: String
    Description: full DNS of our record

Resources:
  ECSCluster:
    Type: 'AWS::ECS::Cluster'
    Properties:
      Tags:
        - Name: !Ref ClusterName
  AlbSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Alb Security Group
      VpcId: !Ref VpcId
  AlbSecurityGroupHTTPinbound:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !Ref AlbSecurityGroup
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: 0.0.0.0/0
  AlbSecurityGroupSSHinbound:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !Ref AlbSecurityGroup
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 0.0.0.0/0
  AlbSecurityGroupALBports:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !Ref AlbSecurityGroup
      IpProtocol: tcp
      FromPort: 31000
      ToPort: 61000
      SourceSecurityGroupId: !Ref AlbSecurityGroup
  EcsSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: ECS Security Group
      VpcId: !Ref VpcId
  EcsSecurityGroupHTTPinbound:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !Ref EcsSecurityGroup
      IpProtocol: tcp
      FromPort: 0
      ToPort: 65535
      SourceSecurityGroupId: !Ref AlbSecurityGroup


  UsersTaskDef:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      Family: !Ref UsersFamily
      ContainerDefinitions:
        - Name: !Ref UsersContainer
          Cpu: '10'
          Essential: 'true'
          Image: !Join [ '', [!Ref AccountId, '.dkr.ecr.us-west-2.amazonaws.com/', !Ref UsersRepo ]]
          Memory: '300'
          PortMappings: 
            - ContainerPort: !Ref ContainerPort
          Environment: 
            - Name: USERS_PORT
              Value: !Ref ContainerPort
            - Name: DB_HOST
              Value: !Join [ '', [ '{{resolve:', !Ref SSMSecretString, !Ref DbHost, '}}' ] ]
            - Name: DB_USER
              Value: !Join [ '', [ '{{resolve:', !Ref SSMSecretString, !Ref DbUser, '}}' ] ]
            - Name: DB_USER_PASSWORD
              Value: !Join [ '', [ '{{resolve:', !Ref SSMSecretString, !Ref DbPassword, '}}' ] ]
            - Name: SECRET_KEY
              Value: !Join [ '', [ '{{resolve:', !Ref SSMSecretString, !Ref SecretKey, '}}' ] ]
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-region: us-west-2
              awslogs-group: !Ref myLogGroup
              awslogs-stream-prefix: /users-taskdef
      Cpu: "1vCPU"
      ExecutionRoleArn: !Ref IamRole
      Memory: "2GB"
      NetworkMode: "awsvpc"
      RequiresCompatibilities: 
        - "FARGATE"
      TaskRoleArn: !Ref IamRole
  FlightsTaskDef:
    Type: 'AWS::ECS::TaskDefinition'
    Condition: CreateResources
    Properties:
      Family: !Ref FlightsFamily
      ContainerDefinitions: 
        - Name: !Ref FlightsContainer
          Image: !Join [ '', [!Ref AccountId, '.dkr.ecr.us-west-2.amazonaws.com/', !Ref FlightsRepo ]]
          Cpu: '10'
          Memory: '300'
          Essential: 'true'
          PortMappings: 
            - ContainerPort: !Ref ContainerPort
          Environment: 
            - Name: FLIGHTS_PORT
              Value: !Ref ContainerPort
            - Name: DB_HOST
              Value: !Join [ '', [ '{{resolve:', !Ref SSMSecretString, !Ref DbHost, '}}' ] ]
            - Name: DB_USER
              Value: !Join [ '', [ '{{resolve:', !Ref SSMSecretString, !Ref DbUser, '}}' ] ]
            - Name: DB_USER_PASSWORD
              Value: !Join [ '', [ '{{resolve:', !Ref SSMSecretString, !Ref DbPassword, '}}' ] ]
            - Name: SECRET_KEY
              Value: !Join [ '', [ '{{resolve:', !Ref SSMSecretString, !Ref SecretKey, '}}' ] ]
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-region: us-west-2
              awslogs-group: !Ref myLogGroup
              awslogs-stream-prefix: /flights-taskdef
      Cpu: "1vCPU"
      ExecutionRoleArn: !Ref IamRole
      Memory: "2GB"
      NetworkMode: "awsvpc"
      RequiresCompatibilities: 
        - "FARGATE"
      TaskRoleArn: !Ref IamRole

  BookingsTaskDef:
    Type: 'AWS::ECS::TaskDefinition'
    Condition: CreateResources
    Properties:
      Family: !Ref BookingsFamily
      ContainerDefinitions: 
        - Name: !Ref BookingsContainer
          Image: !Join [ '', [!Ref AccountId, '.dkr.ecr.us-west-2.amazonaws.com/', !Ref BookingsRepo ]]
          Cpu: '10'
          Memory: '300'
          Essential: 'true'
          PortMappings: 
            - ContainerPort: !Ref ContainerPort
          Environment: 
            - Name: BOOKINGS_PORT
              Value: !Ref ContainerPort
            - Name: DB_HOST
              Value: !Join [ '', [ '{{resolve:', !Ref SSMSecretString, !Ref DbHost, '}}' ] ]
            - Name: DB_USER
              Value: !Join [ '', [ '{{resolve:', !Ref SSMSecretString, !Ref DbUser, '}}' ] ]
            - Name: DB_USER_PASSWORD
              Value: !Join [ '', [ '{{resolve:', !Ref SSMSecretString, !Ref DbPassword, '}}' ] ]
            - Name: SECRET_KEY
              Value: !Join [ '', [ '{{resolve:', !Ref SSMSecretString, !Ref SecretKey, '}}' ] ]
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-region: us-west-2
              awslogs-group: !Ref myLogGroup
              awslogs-stream-prefix: /bookings-taskdef
      Cpu: "1vCPU"
      ExecutionRoleArn: !Ref IamRole
      Memory: "2GB"
      NetworkMode: "awsvpc"
      RequiresCompatibilities: 
        - "FARGATE"
      TaskRoleArn: !Ref IamRole

  FrontendTaskDef:
    Type: 'AWS::ECS::TaskDefinition'
    Condition: CreateResources
    Properties:
      Family: !Ref FrontendFamily
      ContainerDefinitions: 
        - Name: !Ref FrontendContainer
          Image: !Join [ '', [!Ref AccountId, '.dkr.ecr.us-west-2.amazonaws.com/', !Ref FrontendRepo ]]
          Cpu: '10'
          Memory: '300'
          Essential: 'true'
          PortMappings: 
            - ContainerPort: !Ref ContainerPort
          Environment: 
            - Name: FRONTEND_PORT
              Value: !Ref ContainerPort
            - Name: HOST_DOMAIN
              Value: !Join [ '', [ 'http://', !GetAtt ECSALB.DNSName ] ]
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-region: us-west-2
              awslogs-group: !Ref myLogGroup
              awslogs-stream-prefix: /frontend-taskdef
      Cpu: "1vCPU"
      ExecutionRoleArn: !Ref IamRole
      Memory: "2GB"
      NetworkMode: "awsvpc"
      RequiresCompatibilities: 
        - "FARGATE"
      TaskRoleArn: !Ref IamRole

  ECSALB:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Name: ECSALB
      Scheme: internet-facing
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: '30'
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      SecurityGroups:
        - !Ref AlbSecurityGroup
  ALBListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref UsersTG
      LoadBalancerArn: !Ref ECSALB
      Port: '80'
      Protocol: HTTP
  FlightsListenerRule:
    Type: 'AWS::ElasticLoadBalancingV2::ListenerRule'
    Condition: CreateResources
    Properties:
      Actions:
        - Type: forward
          TargetGroupArn: !Ref FlightsTG
      Conditions:
        - Field: path-pattern
          Values:
            - !Ref FlightsPath
      ListenerArn: !Ref ALBListener
      Priority: 1
  BookingsListenerRule:
    Type: 'AWS::ElasticLoadBalancingV2::ListenerRule'
    Condition: CreateResources
    Properties:
      Actions:
        - Type: forward
          TargetGroupArn: !Ref BookingsTG
      Conditions:
        - Field: path-pattern
          Values:
            - !Ref BookingsPath
      ListenerArn: !Ref ALBListener
      Priority: 2
  FrontendListenerRule:
    Type: 'AWS::ElasticLoadBalancingV2::ListenerRule'
    Condition: CreateResources
    Properties:
      Actions:
        - Type: forward
          TargetGroupArn: !Ref FrontendTG
      Conditions:
        - Field: path-pattern
          Values:
            - !Ref FrontendPath
      ListenerArn: !Ref ALBListener
      Priority: 3
  UsersTG:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    DependsOn: ECSALB
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: !Ref UsersHealthCheck
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      Name: UsersTG
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 2
      VpcId: !Ref VpcId
      TargetType: ip
    CreationPolicy:
      ResourceSignal:
        Timeout: PT15M
  FlightsTG:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Condition: CreateResources
    DependsOn: ECSALB
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: !Ref FlightsHealthCheck
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      Name: FlightsTG
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 2
      VpcId: !Ref VpcId
      TargetType: ip
    CreationPolicy:
      ResourceSignal:
        Timeout: PT15M
  BookingsTG:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Condition: CreateResources
    DependsOn: ECSALB
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: !Ref BookingsHealthCheck
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      Name: BookingsTG
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 2
      VpcId: !Ref VpcId
      TargetType: ip
    CreationPolicy:
      ResourceSignal:
        Timeout: PT15M
  FrontendTG:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Condition: CreateResources
    DependsOn: ECSALB
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: !Ref FrontendHealthCheck
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      Name: FrontendTG
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 2
      VpcId: !Ref VpcId
      TargetType: ip
    CreationPolicy:
      ResourceSignal:
        Timeout: PT15M
  UsersService:
    Type: 'AWS::ECS::Service'
    DependsOn: ALBListener
    Properties:
      Cluster: !Ref ECSCluster
      DesiredCount: !If [ProdEnv, 4, 2]
      LaunchType: "FARGATE"
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: "ENABLED"
          SecurityGroups: 
            - !Ref EcsSecurityGroup
          Subnets: 
            - !Ref PrivateSubnet1
            - !Ref PrivateSubnet2
      LoadBalancers:
        - ContainerName: !Ref UsersContainer
          ContainerPort: !Ref ContainerPort
          TargetGroupArn: !Ref UsersTG
      TaskDefinition: !Ref UsersTaskDef
      Tags:
        - Key: Name
          Value: UsersService
  FlightsService:
    Type: 'AWS::ECS::Service'
    Condition: CreateResources
    DependsOn: FlightsListenerRule
    Properties:
      Cluster: !Ref ECSCluster
      DesiredCount: !If [ProdEnv, 4, 2]
      LaunchType: "FARGATE"
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: "ENABLED"
          SecurityGroups: 
            - !Ref EcsSecurityGroup
          Subnets: 
            - !Ref PrivateSubnet1
            - !Ref PrivateSubnet2
      LoadBalancers:
        - ContainerName: !Ref FlightsContainer
          ContainerPort: !Ref ContainerPort
          TargetGroupArn: !Ref FlightsTG
      TaskDefinition: !Ref FlightsTaskDef
      Tags:
        - Key: Name
          Value: FlightsService
  BookingsService:
    Type: 'AWS::ECS::Service'
    Condition: CreateResources
    DependsOn: BookingsListenerRule
    Properties:
      Cluster: !Ref ECSCluster
      DesiredCount: !If [ProdEnv, 4, 2]
      LaunchType: "FARGATE"
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: "ENABLED"
          SecurityGroups: 
            - !Ref EcsSecurityGroup
          Subnets: 
            - !Ref PrivateSubnet1
            - !Ref PrivateSubnet2
      LoadBalancers:
        - ContainerName: !Ref BookingsContainer
          ContainerPort: !Ref ContainerPort
          TargetGroupArn: !Ref BookingsTG
      TaskDefinition: !Ref BookingsTaskDef
      Tags:
        - Key: Name
          Value: BookingsService
  FrontendService:
    Type: 'AWS::ECS::Service'
    Condition: CreateResources
    DependsOn: FrontendListenerRule
    Properties:
      Cluster: !Ref ECSCluster
      DesiredCount: !If [ProdEnv, 4, 2]
      LaunchType: "FARGATE"
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: "ENABLED"
          SecurityGroups: 
            - !Ref EcsSecurityGroup
          Subnets: 
            - !Ref PrivateSubnet1
            - !Ref PrivateSubnet2
      LoadBalancers:
        - ContainerName: !Ref FrontendContainer
          ContainerPort: !Ref ContainerPort
          TargetGroupArn: !Ref FrontendTG
      TaskDefinition: !Ref FrontendTaskDef
      Tags:
        - Key: Name
          Value: FrontendService
  Route53:
    Type: AWS::Route53::RecordSet
    Properties: 
      ResourceRecords:
        - !GetAtt ECSALB.DNSName
      HostedZoneId: !Ref HostedZoneId
      Name: !Ref RecordName
      Type: 'CNAME'
      TTL: '300'
  myLogGroup: 
    Type: AWS::Logs::LogGroup
    Properties: 
      LogGroupName: wc/ecs
      RetentionInDays: 1
# Outputs:
#   ecsservice:
#     Value: !Ref service
#   ecscluster:
#     Value: !Ref ECSCluster
#   ECSALB:
#     Description: Your ALB DNS URL
#     Value: !Join 
#       - ''
#       - - !GetAtt 
#           - ECSALB
#           - DNSName
#   taskdef:
#     Value: !Ref taskdefinition
